# binmatch

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml  rust.yml
src/: lib.rs  no_std_include.rs  tests.rs
