[package]
name = "binmatch"
version = "1.0.1"
edition = "2021"
authors = ["1337Dakota <72140289+1337Dakota@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
description = "A simple binary pattern matching crate"
repository = "https://github.com/1337Dakota/binmatch"
readme = "README.md"
keywords = ["pattern-matching", "binary-data"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
