[package]
name = "binmatch"
version = "1.2.0"
edition = "2021"
authors = ["1337Dakota <72140289+1337Dakota@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
description = "A simple binary pattern matching crate"
repository = "https://github.com/1337Dakota/binmatch"
readme = "README.md"
keywords = ["pattern-matching", "binary-data"]
categories = ["encoding"]

[dependencies]
thiserror = { version = "1.0.58", optional = true }

[features]
std = ["dep:thiserror"]
default = ["std"]
